# opengl_practices

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  practice1.cpp  practice2.cpp
src/common/: camera.hpp  shader.cpp  shader.hpp
src/shaders/: frag.fs  vert.vs
